Bug 1413064 - Update suite/ for nsIPrefBranch.idl changes. r=IanN